Add basic validation for Create methods and delete book method
