# dtos/bookCreateDTO.go
@@ -1,7 +1,7 @@
 package dto
 
 type BookCreateDTO struct {
-	Title    string `json:"title"`
-	AuthorID string   `json:"author"`
-	Genre    string `json:"genre"`
+	Title    string `json:"title" validate:"required,min=2,max=100"`
+	AuthorID string `json:"author" validate:"required,uuid"`
+	Genre    string `json:"genre" validate:"required,min=2,max=25"`
 }
